--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 	<body>
 		<div class="container">
 			<header>
-				<h2>Todo List</h2>
+				<h1>Todo List</h1>
 			</header>
 			<hr />
 			<main>
 				<h3>Nueva tarea</h3>
 				<form action="" id="formulario">
-					<input type="text" id="newTask" />
+					<input
+						type="text"
+						id="newTask"
+						placeholder="Ingresa una nueva tarea"
+					/>
 					<button>Agregar</button>
 				</form>
 			</main>
